@@ -40,6 +40,12 @@ New features
   An abstract class :class:`rpy2.rinterface_lib.sexp.SupportsSEXP` is added
   to identify objects supporting a `__sexp__` protocol, and that abstract
   class can also be used with type hints.
+- :func:`rpy2.robjects.functions.wrap_r_functions` can create Python functions
+  with matching signature from R functions
+
+- :func:`rpy2.robjects.functions.wrap_r_functions` can create Python functions
+  with matching signature from R functions.
+
 
 Changes
 -------
